Minor discrepancy fixes